--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -4,13 +4,15 @@
     <string name="app_launcher_name">Малюнкі</string>
     <string name="open_file">Адкрыць файл</string>
     <string name="eraser">Гумка</string>
+    <string name="eyedropper">Піпетка</string>
+    <string name="failed_to_load_image">Не атрымалася загрузіць выяву %s</string>
+    <!-- Settings -->
+    <string name="show_brush_size">Паказваць інструмент змены памера пэндзля</string>
     <string name="allow_zooming_moving_canvas">Дазволіць масштабаванне і перамяшчэнне палатна жэстамі</string>
     <string name="clear">Ачысціць</string>
     <string name="change_background_color">Змяніць колер фону</string>
-    <string name="app_title">Simple Draw Pro - App for quick &amp; easy sketches</string>
-    <string name="eyedropper">Піпетка</string>
-    <string name="failed_to_load_image">Не атрымалася загрузіць выяву %s</string>
-    <string name="show_brush_size">Паказваць інструмент змены памера пэндзля</string>
-    <string name="app_short_description">Pen and paper for your quick sketches.</string>
-    <string name="app_long_description"> Want to draw something creative but you have no paper\? This app will suit you perfectly. Just pick a color and draw, it is as easy as that. You can either save the drawing in a file, print it or share it directly through email or social networks so that your friends can have some fun with it too. This hugely popular app for quick sketches provides many useful functions like Undo/Redo, changing the background color, or using an image as the background. You can optionally make the app prevent the device from falling asleep too. You can also change the brush size, or use an eraser, if you messed something up. It supports inserting colors either by selecting it on a huge palette, or by entering the colors hex code. The app supports many different formats like PNG, JPG or SVG vectors. You can either draw something new from scratch, or open some file and just play around with it. It is perfectly usable either by you, or by a family with children to play some games. After all, everyone has a piece of artist in himself. You will not find any fancy or advanced tools, brushes, fonts, filters here, it is supposed to be used to have some fun with. It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps. Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors. <b>Check out the full suite of Simple Tools here:</b> https://www.simplemobiletools.com <b>Facebook:</b> https://www.facebook.com/simplemobiletools <b>Reddit:</b> https://www.reddit.com/r/SimpleMobileTools </string>
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
