--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -6,6 +6,7 @@
     <string name="eraser">ഇറേസർ</string>
     <string name="eyedropper">ഐഡ്രോപ്പർ</string>
     <string name="failed_to_load_image">ചിത്രം %s ലോഡ് ചെയ്യുന്നതിൽ പരാജയപ്പെട്ടു</string>
+    <!-- Settings -->
     <string name="show_brush_size">ബ്രഷ് സൈസ് ടൂൾ കാണിക്കുക</string>
     <string name="allow_zooming_moving_canvas">ആംഗ്യങ്ങൾ ഉപയോഗിച്ച് ക്യാൻവാസ് സൂം ചെയ്യാനും നീക്കാനും അനുവദിക്കുക</string>
     <string name="clear">ക്ലിയർ ചെയുക</string>
