--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">Otevřít soubor</string>
     <string name="eraser">Guma</string>
     <string name="eyedropper">Kapátko</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Nepodařilo se načíst obrázek %s</string>
     <!-- Settings -->
     <string name="show_brush_size">Zobrazit nástroj velikosti štětce</string>
