--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">Åbn fil</string>
     <string name="eraser">Viskelæder</string>
     <string name="eyedropper">Pipette</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Det mislykkedes at indlæse billedet %s</string>
     <!-- Settings -->
     <string name="show_brush_size">Vis regulering af stregtykkelse</string>
