--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">Atverti bylą</string>
     <string name="eraser">Trintukas</string>
     <string name="eyedropper">Eyedropper</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Nepavyko įkelti paveikslėlio %s</string>
     <!-- Settings -->
     <string name="show_brush_size">Rodyti teptuko dydžio įrankį</string>
