--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">Odpri datoteko</string>
     <string name="eraser">Radirka</string>
     <string name="eyedropper">Kapalka</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Nalaganje slike %s ni uspelo</string>
     <!-- Settings -->
     <string name="show_brush_size">Omogoči spreminjanje velikosti čopiča</string>
