--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">เปิดไฟล์</string>
     <string name="eraser">Eraser</string>
     <string name="eyedropper">Eyedropper</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Failed to load image %s</string>
     <!-- Settings -->
     <string name="show_brush_size">Show brush size tool</string>
