--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -5,6 +5,7 @@
     <string name="open_file">Відкрити файл</string>
     <string name="eraser">Гумка</string>
     <string name="eyedropper">Піпетка</string>
+    <string name="bucket_fill">Bucket fill</string>
     <string name="failed_to_load_image">Не вдалося завантажити зображення %s</string>
     <!-- Settings -->
     <string name="show_brush_size">Показувати інструмент зміни пензля</string>
