--- a/app/src/main/res/values-pa-rPK/strings.xml
+++ b/app/src/main/res/values-pa-rPK/strings.xml
@@ -4,9 +4,10 @@
     <string name="app_launcher_name">Draw</string>
     <string name="open_file">فائل کھُلھو</string>
     <string name="eraser">Eraser</string>
-    <string name="failed_to_load_image">تصویر `⁠‫⁠%s⁠‬⁠`؜ لوڈ کر نہیں سکدی</string>
     <string name="eyedropper">Eyedropper</string>
     <string name="bucket_fill">بالٹی نال بھرو</string>
+    <string name="failed_to_load_image">تصویر `⁠‫⁠%s⁠‬⁠`؜ لوڈ کر نہیں سکدی</string>
+    <!-- Settings -->
     <string name="show_brush_size">برش اکار دا سَند ویکھو</string>
     <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">ہٹاؤ</string>
